--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"@storybook/html": "8.1.10",
 		"@storybook/testing-library": "0.2.2",
 		"@types/uniqid": "5.3.4",
+		"daisyui": "4.12.10",
 		"eslint": "9.5.0",
 		"eslint-config-prettier": "9.1.0",
 		"eslint-plugin-solid": "0.14.0",
