--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
 		"@solidjs/start": "1.0.1",
 		"@thisbeyond/solid-dnd": "0.7.5",
 		"autoprefixer": "10.4.19",
+		"clsx": "2.1.1",
 		"postcss": "8.4.38",
 		"solid-js": "1.8.17",
+		"tailwind-merge": "2.3.0",
 		"tailwindcss": "3.4.4",
 		"uniqid": "5.4.0",
 		"vinxi": "0.3.12"
