--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"@ark-ui/solid": "3.3.0",
 		"@solid-primitives/keyboard": "1.2.8",
+		"@solid-primitives/storage": "3.7.1",
 		"@solidjs/router": "0.13.5",
 		"@solidjs/start": "1.0.1",
 		"@thisbeyond/solid-dnd": "0.7.5",
